# fikr_app

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  pyproject.toml
chrome_extension/: manifest.json  popup.html  popup.js
docs/: IOS_APP_PLAN.md
ios/: README.md  SETUP_GUIDE.md
ios/Fikr/Fikr/: APIClient.swift  BookmarkView.swift  ContentView.swift  FikrApp.swift  Models.swift  SettingsView.swift  TagStore.swift
ios/Fikr/Fikr.xcodeproj/: project.pbxproj
ios/Fikr/FikrShare/: Info.plist  ShareView.swift  ShareViewController.swift
src/: ai_client.py  archiver.py  db.py  dtos.py  import_data.py  inbox_worker.py  init_db.py  logic.py  main.py  model.py
src/static/: style.css
src/templates/: base.html  detail.html  edit.html  index.html
